@@ -6,58 +6,252 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import io.unitycatalog.client.ApiException;
-import java.io.IOException;
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.With;
+import lombok.experimental.Accessors;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.spark.sql.Row;
+import org.apache.spark.sql.types.DataType;
+import org.apache.spark.sql.types.StructType;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.condition.EnabledIf;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
 public abstract class BaseTableReadWriteTest extends BaseSparkIntegrationTest {
 
-  private static final String DELTA_TABLE = "test_delta";
-  private static final String ANOTHER_DELTA_TABLE = "test_delta_another";
-  private static final String DELTA_TABLE_PARTITIONED = "test_delta_partitioned";
+  protected static final String TEST_TABLE = "test_table";
+  protected static final String ANOTHER_TEST_TABLE = "test_table_another";
+  protected static final String TBLPROPERTIES_CATALOG_OWNED_CLAUSE =
+      String.format(
+          "TBLPROPERTIES ('%s'='%s')",
+          UCTableProperties.DELTA_CATALOG_MANAGED_KEY,
+          UCTableProperties.DELTA_CATALOG_MANAGED_VALUE);
 
   /**
-   * Set up a delta table and returns the table full name. This function is used by tests that
-   * aren't cloud aware. It simply uses the same cloud as configured for managed storage.
+   * This class is used for control various options for table creation during test. The tableFormat
+   * is controlled at the testsuite level by tableFormat().
    */
-  protected final String setupDeltaTable(
-      String catalogName, String tableName, List<String> partitionColumns)
-      throws IOException, ApiException {
-    return setupDeltaTable(managedStorageCloudScheme(), catalogName, tableName, partitionColumns);
+  @NoArgsConstructor
+  @AllArgsConstructor
+  @Accessors(chain = true)
+  @Getter
+  @Setter
+  protected class TableSetupOptions {
+    private String catalogName;
+    private String schemaName = SCHEMA_NAME;
+    private String tableName;
+    private String cloudScheme = managedStorageCloudScheme();
+    private Optional<String> partitionColumn = Optional.empty();
+    @With private Optional<Pair<Integer, String>> asSelect = Optional.empty();
+    private Optional<String> comment = Optional.empty();
+    private boolean replaceTable = false;
+
+    public TableSetupOptions setCatalogName(String name) {
+      catalogName = quoteEntityName(name);
+      return this;
+    }
+
+    public TableSetupOptions setSchemaName(String name) {
+      schemaName = quoteEntityName(name);
+      return this;
+    }
+
+    public TableSetupOptions setTableName(String name) {
+      tableName = quoteEntityName(name);
+      return this;
+    }
+
+    public TableSetupOptions setPartitionColumn(String column) {
+      assert List.of("i", "s").contains(column);
+      partitionColumn = Optional.of(column);
+      return this;
+    }
+
+    public TableSetupOptions setAsSelect(int i, String s) {
+      asSelect = Optional.of(Pair.of(i, s));
+      return this;
+    }
+
+    public TableSetupOptions setComment(String c) {
+      comment = Optional.of(c);
+      return this;
+    }
+
+    public String partitionClause() {
+      return partitionColumn.map(c -> String.format("PARTITIONED BY (%s)", c)).orElse("");
+    }
+
+    public String columnsClause() {
+      if (asSelect.isEmpty()) {
+        return "(i INT, s STRING)";
+      } else {
+        // CTAS can't specify columns
+        return "";
+      }
+    }
+
+    public String asSelectClause() {
+      return asSelect
+          .map(x -> String.format("AS SELECT %d AS i, '%s' AS s", x.getLeft(), x.getRight()))
+          .orElse("");
+    }
+
+    public String commentClause() {
+      return comment.map(c -> String.format("COMMENT '%s'", c)).orElse("");
+    }
+
+    public String ddlCommand() {
+      return replaceTable ? "REPLACE" : "CREATE";
+    }
+
+    public String createManagedTableSql() {
+      return String.format(
+          "%s TABLE %s.%s.%s %s USING %s %s %s %s %s",
+          ddlCommand(),
+          catalogName,
+          schemaName,
+          tableName,
+          columnsClause(),
+          tableFormat(),
+          partitionClause(),
+          TBLPROPERTIES_CATALOG_OWNED_CLAUSE,
+          commentClause(),
+          asSelectClause());
+    }
+
+    public String createExternalTableSql(String location) {
+      return String.format(
+          "%s TABLE %s.%s.%s%s USING %s %s %s LOCATION '%s' %s",
+          ddlCommand(),
+          catalogName,
+          schemaName,
+          tableName,
+          columnsClause(),
+          tableFormat(),
+          partitionClause(),
+          commentClause(),
+          location,
+          asSelectClause());
+    }
+
+    public String createDeltaPathTableSql(String location) {
+      assert testingDelta();
+      return String.format(
+          "%s TABLE %s.`%s`%s USING %s %s %s %s",
+          ddlCommand(),
+          tableFormat(),
+          location,
+          columnsClause(),
+          tableFormat(),
+          partitionClause(),
+          commentClause(),
+          asSelectClause());
+    }
+
+    public String fullTableName() {
+      return String.join(".", catalogName, schemaName, tableName);
+    }
   }
 
   /**
-   * Set up a delta table with storage on emulated cloud and returns the table full name. Subclasses
-   * need to override it accordingly.
+   * Set up a table and returns the table full name. This function is used by tests that aren't
+   * cloud aware. It simply uses the same cloud as configured for managed storage. The table format
+   * is controlled by tableFormat().
    */
-  protected abstract String setupDeltaTable(
-      String cloudScheme, String catalogName, String tableName, List<String> partitionColumns)
-      throws IOException, ApiException;
+  protected final String setupTable(String catalogName, String tableName) {
+    return setupTable(new TableSetupOptions().setCatalogName(catalogName).setTableName(tableName));
+  }
 
+  /**
+   * Set up a table with storage on emulated cloud and returns the table full name. The table format
+   * is controlled by tableFormat().
+   */
+  protected final String setupTable(String cloudScheme, String catalogName, String tableName) {
+    return setupTable(
+        new TableSetupOptions()
+            .setCloudScheme(cloudScheme)
+            .setCatalogName(catalogName)
+            .setTableName(tableName));
+  }
+
+  /**
+   * Set up a table with storage on emulated cloud and returns the table full name. The table format
+   * is controlled by tableFormat(). Subclasses need to override this function accordingly.
+   */
+  protected abstract String setupTable(TableSetupOptions options);
+
+  /**
+   * The table format to be tested. Subclasses override this function to test different table
+   * formats.
+   */
+  protected abstract String tableFormat();
+
+  protected final boolean testingDelta() {
+    return tableFormat().equalsIgnoreCase("DELTA");
+  }
+
+  /**
+   * This test creates table in different ways:
+   *
+   * <ul>
+   *   <li>in both SPARK_CATALOG and CATALOG_NAME
+   *   <li>with and without partition columns
+   *   <li>with and without CTAS
+   *   <li>using UPDATE TABLE and CREATE TABLE
+   * </ul>
+   *
+   * For all the 16 (2^4) tables it does a simple read and write test to make sure they all work.
+   */
   @Test
-  public void testDeltaTableReadWrite() throws IOException, ApiException {
+  public void testTableCreateReadWrite() {
     // Test both `spark_catalog` and other catalog names.
     session = createSparkSessionWithCatalogs(SPARK_CATALOG, CATALOG_NAME);
 
-    String t1 = setupDeltaTable(SPARK_CATALOG, DELTA_TABLE, List.of());
-    testTableReadWrite(t1);
-
-    String t2 = setupDeltaTable(SPARK_CATALOG, DELTA_TABLE_PARTITIONED, Arrays.asList("s"));
-    testTableReadWrite(t2);
-
-    String t3 = setupDeltaTable(CATALOG_NAME, DELTA_TABLE, List.of());
-    testTableReadWrite(t3);
-
-    String t4 = setupDeltaTable(CATALOG_NAME, DELTA_TABLE_PARTITIONED, Arrays.asList("s"));
-    testTableReadWrite(t4);
+    int tableNameCounter = 0;
+    for (String catalogName : List.of(SPARK_CATALOG, CATALOG_NAME)) {
+      for (boolean withPartitionColumns : List.of(true, false)) {
+        for (boolean withCtas : List.of(true, false)) {
+          for (boolean replaceTable : List.of(true, false)) {
+            String tableName = TEST_TABLE + tableNameCounter;
+            tableNameCounter++;
+            if (replaceTable) {
+              if (withCtas && !testingDelta()) {
+                // "REPLACE TABLE AS SELECT" is only supported for Delta.
+                continue;
+              }
+              // First, create a different table to replace.
+              sql(
+                  "CREATE TABLE %s.%s.%s USING DELTA %s AS SELECT 0.1 AS col1",
+                  catalogName, SCHEMA_NAME, tableName, TBLPROPERTIES_CATALOG_OWNED_CLAUSE);
+            }
+            TableSetupOptions options =
+                new TableSetupOptions()
+                    .setCatalogName(catalogName)
+                    .setTableName(tableName)
+                    .setReplaceTable(replaceTable);
+            if (withPartitionColumns) {
+              options.setPartitionColumn("s");
+            }
+            if (withCtas) {
+              options.setAsSelect(1, "a");
+            }
+            String t1 = setupTable(options);
+            if (withCtas) {
+              testTableReadWriteCreatedAsSelect(t1, Pair.of(1, "a"));
+            } else {
+              testTableReadWrite(t1);
+            }
+          }
+        }
+      }
+    }
   }
 
   /**
@@ -90,11 +284,24 @@ public abstract class BaseTableReadWriteTest extends BaseSparkIntegrationTest {
     }
   }
 
+  protected void validateTableEmpty(String fullTableName) {
+    assertThat(session.table(fullTableName).collectAsList()).isEmpty();
+  }
+
+  protected void validateTableSchema(StructType tableSchema, Pair<String, DataType>... expected) {
+    assertThat(tableSchema.size()).isEqualTo(expected.length);
+    for (int i = 0; i < expected.length; i++) {
+      assertThat(tableSchema.apply(i).name()).isEqualTo(expected[i].getLeft());
+      assertThat(tableSchema.apply(i).dataType()).isEqualTo(expected[i].getRight());
+    }
+  }
+
   @Test
-  public void testTimeTravelDeltaTable() throws ApiException, IOException {
+  @EnabledIf("testingDelta")
+  public void testTimeTravelDeltaTable() {
     session = createSparkSessionWithCatalogs(SPARK_CATALOG);
 
-    String t1 = setupDeltaTable(SPARK_CATALOG, DELTA_TABLE, List.of());
+    String t1 = setupTable(SPARK_CATALOG, TEST_TABLE);
     sql("INSERT INTO %s SELECT 1, 'a'", t1);
 
     String timestamp = Instant.now().toString();
@@ -110,90 +317,76 @@ public abstract class BaseTableReadWriteTest extends BaseSparkIntegrationTest {
 
   @ParameterizedTest
   @MethodSource("cloudParameters")
-  public void testCredentialDelta(String scheme, boolean renewCredEnabled)
-      throws ApiException, IOException {
+  public void testTableOperations(String scheme, boolean renewCredEnabled) {
     session = createSparkSessionWithCatalogs(renewCredEnabled, SPARK_CATALOG, CATALOG_NAME);
 
-    String t1 = setupDeltaTable(scheme, SPARK_CATALOG, DELTA_TABLE, List.of());
+    // t1 has (1, 'a')
+    String t1 = setupTable(scheme, SPARK_CATALOG, TEST_TABLE);
     testTableReadWrite(t1);
 
-    String t2 = setupDeltaTable(scheme, CATALOG_NAME, DELTA_TABLE, List.of());
-    testTableReadWrite(t2);
+    // t2 has (2, 'a')
+    String t2 = setupTable(scheme, CATALOG_NAME, ANOTHER_TEST_TABLE);
+    sql("INSERT INTO %s SELECT 2, 'a'", t2);
+    validateRows(sql("SELECT * FROM %s", t2), Pair.of(2, "a"));
 
-    validateRows(sql("SELECT l.i FROM %s l JOIN %s r ON l.i = r.i", t1, t2), 1);
-  }
+    if (testingDelta()) {
+      // UPDATE, MERGE INTO and DELETE are only supported in Delta tables.
 
-  @ParameterizedTest
-  @MethodSource("cloudParameters")
-  public void testMergeDeleteUpdateDeltaTable(String scheme, boolean renewCredEnabled)
-      throws ApiException, IOException {
-    session = createSparkSessionWithCatalogs(renewCredEnabled, SPARK_CATALOG, CATALOG_NAME);
+      // Test UPDATE. The table t2 will have (2, 'b')
+      sql("UPDATE %s SET s = 'b' WHERE i = 2", t2);
+      validateRows(sql("SELECT * FROM %s", t2), Pair.of(2, "b"));
 
-    // Test MERGE. The table t1 will have (1, 'a') and (2, 'b')
-    String t1 = setupDeltaTable(scheme, SPARK_CATALOG, DELTA_TABLE, List.of());
-    sql("INSERT INTO %s SELECT 1, 'a'", t1);
+      // Test MERGE. The table t1 will have (1, 'a') and (2, 'b')
+      sql("MERGE INTO %s USING %s ON %s.i = %s.i WHEN NOT MATCHED THEN INSERT *", t1, t2, t1, t2);
+      validateRows(sql("SELECT * FROM %s ORDER BY i", t1), Pair.of(1, "a"), Pair.of(2, "b"));
 
-    String t2 = setupDeltaTable(scheme, CATALOG_NAME, ANOTHER_DELTA_TABLE, List.of());
-    sql("INSERT INTO %s SELECT 2, 'b'", t2);
+      // Test DELETE. The table t1 will have (1, 'a')
+      sql("DELETE FROM %s WHERE i = 2", t1);
+      validateRows(sql("SELECT * FROM %s", t1), Pair.of(1, "a"));
+    }
 
-    sql("MERGE INTO %s USING %s ON %s.i = %s.i WHEN NOT MATCHED THEN INSERT *", t1, t2, t1, t2);
-    validateRows(sql("SELECT * FROM %s ORDER BY i", t1), Pair.of(1, "a"), Pair.of(2, "b"));
-
-    // Test DELETE. The table t1 will have (1, 'a')
-    sql("DELETE FROM %s WHERE i = 2", t1);
-    validateRows(sql("SELECT * FROM %s", t1), Pair.of(1, "a"));
-
-    // Test UPDATE. The table t1 will have (2, 'a')
-    sql("UPDATE %s SET i = 2 WHERE i = 1", t1);
-    validateRows(sql("SELECT * FROM %s", t1), Pair.of(2, "a"));
-  }
-
-  @Test
-  public void testShowTables() throws ApiException, IOException {
-    session = createSparkSessionWithCatalogs(SPARK_CATALOG);
-    setupDeltaTable(SPARK_CATALOG, DELTA_TABLE, List.of());
-
-    List<Row> tables = sql("SHOW TABLES in %s", SCHEMA_NAME);
-    assertThat(tables).hasSize(1);
-    assertThat(tables.get(0).getString(0)).isEqualTo(SCHEMA_NAME);
-    assertThat(tables.get(0).getString(1)).isEqualTo(DELTA_TABLE);
+    // Test SHOW TABLES
+    List<Row> tables1 = sql("SHOW TABLES in %s.%s", SPARK_CATALOG, SCHEMA_NAME);
+    assertThat(tables1).hasSize(1);
+    assertThat(tables1.get(0).getString(0)).isEqualTo(SCHEMA_NAME);
+    assertThat(tables1.get(0).getString(1)).isEqualTo(TEST_TABLE);
+    List<Row> tables2 = sql("SHOW TABLES in %s.%s", CATALOG_NAME, SCHEMA_NAME);
+    assertThat(tables2).hasSize(1);
+    assertThat(tables2.get(0).getString(0)).isEqualTo(SCHEMA_NAME);
+    assertThat(tables2.get(0).getString(1)).isEqualTo(ANOTHER_TEST_TABLE);
 
     assertThatThrownBy(() -> sql("SHOW TABLES in a.b.c"))
         .isInstanceOf(ApiException.class)
         .hasMessageContaining("Nested namespaces are not supported");
-  }
 
-  @Test
-  public void testDropTable() throws ApiException, IOException {
-    session = createSparkSessionWithCatalogs(SPARK_CATALOG);
-    String fullName = setupDeltaTable(SPARK_CATALOG, DELTA_TABLE, List.of());
-
-    assertThat(session.catalog().tableExists(fullName)).isTrue();
-    sql("DROP TABLE %s", fullName);
-    assertThat(session.catalog().tableExists(fullName)).isFalse();
+    // DROP TABLE
+    for (String fullTableName : List.of(t1, t2)) {
+      assertThat(session.catalog().tableExists(fullTableName)).isTrue();
+      sql("DROP TABLE %s", fullTableName);
+      assertThat(session.catalog().tableExists(fullTableName)).isFalse();
+    }
     assertThatThrownBy(() -> sql("DROP TABLE a.b.c.d"))
         .isInstanceOf(ApiException.class)
         .hasMessageContaining("Nested namespaces are not supported");
   }
 
   /**
-   * This function is used for testing table names with a hyphen to make sure that it doesn't quote
-   * with backtick incorrectly. It can be testing against an external or managed table.
-   *
-   * @param location Set to the location of external, or empty if it needs to be a managed table.
+   * This test is used for testing table names with a hyphen to make sure that it doesn't quote with
+   * backtick incorrectly. It can be testing against an external or managed table.
    */
-  public void testHyphenInTableNameBase(
-      Optional<String> location, Optional<String> tblpropertiesClause) {
+  @Test
+  public void testHyphenInTableName() {
     String catalogName = "test-catalog-name";
     String schemaName = "test-schema-name";
     String tableName = "test-table-name";
     session = createSparkSessionWithCatalogs(SPARK_CATALOG, catalogName);
     sql("CREATE SCHEMA `%s`.`%s`", catalogName, schemaName);
-    String fullTableName = String.format("%s.%s.%s", catalogName, schemaName, tableName);
-    String locationClause = location.map(l -> String.format("LOCATION '%s'", l)).orElse("");
-    sql(
-        "CREATE TABLE %s(i INT, s STRING) USING DELTA %s %s",
-        quoteEntityName(fullTableName), locationClause, tblpropertiesClause.orElse(""));
+    String fullTableName =
+        setupTable(
+            new TableSetupOptions()
+                .setCatalogName(catalogName)
+                .setSchemaName(schemaName)
+                .setTableName(tableName));
 
     testTableReadWrite(fullTableName);
 
@@ -202,20 +395,26 @@ public abstract class BaseTableReadWriteTest extends BaseSparkIntegrationTest {
     assertThat(tables1.get(0).getString(0)).isEqualTo(quoteEntityName(schemaName));
     assertThat(tables1.get(0).getString(1)).isEqualTo(tableName);
 
-    sql("DROP TABLE %s", quoteEntityName(fullTableName));
+    sql("DROP TABLE %s", fullTableName);
     List<Row> tables2 = sql("SHOW TABLES in `%s`.`%s`", catalogName, schemaName);
     assertThat(tables2).isEmpty();
   }
 
   protected String quoteEntityName(String entityName) {
-    return Arrays.stream(entityName.split("\\."))
-        .map(x -> x.contains("-") ? String.format("`%s`", x) : x)
-        .collect(Collectors.joining("."));
+    return entityName.contains("-") ? String.format("`%s`", entityName) : entityName;
   }
 
   protected void testTableReadWrite(String tableFullName) {
-    assertThat(sql("SELECT * FROM %s", quoteEntityName(tableFullName))).isEmpty();
-    sql("INSERT INTO %s SELECT 1, 'a'", quoteEntityName(tableFullName));
-    validateRows(sql("SELECT * FROM %s", quoteEntityName(tableFullName)), Pair.of(1, "a"));
+    assertThat(sql("SELECT * FROM %s", tableFullName)).isEmpty();
+    sql("INSERT INTO %s SELECT 1, 'a'", tableFullName);
+    validateRows(sql("SELECT * FROM %s", tableFullName), Pair.of(1, "a"));
+  }
+
+  protected void testTableReadWriteCreatedAsSelect(
+      String tableFullName, Pair<Integer, String> asSelect) {
+    validateRows(sql("SELECT * FROM %s", tableFullName), asSelect);
+    Pair<Integer, String> newValue = Pair.of(asSelect.getLeft() + 1, asSelect.getRight() + "1");
+    sql("INSERT INTO %s SELECT %d, '%s'", tableFullName, newValue.getLeft(), newValue.getRight());
+    validateRows(sql("SELECT * FROM %s ORDER BY i", tableFullName), asSelect, newValue);
   }
 }
